.provarCaches/00D5f000005vwGkEAI/objects/rstkf__processlogf__c.object
<CustomObject>
    <description>processlogf__c</description>
    <fields>
        <fullName>rstkf__batchexecstartedmillis__c</fullName>
        <label>Batch Exec Started</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__batchfinishmillis__c</fullName>
        <label>Batch Finish</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__batchstartedmillis__c</fullName>
        <label>Batch Started</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__batchsubmittedmillis__c</fullName>
        <label>Batch Submitted</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__batchthreadsused__c</fullName>
        <label>Batch Threads</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__begintime__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstkf__capture__c</fullName>
        <label>Capture</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__data__c</fullName>
        <label>Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__endtime__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstkf__errormessage__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__errormessagelong__c</fullName>
        <label>Error Message (Long)</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__errorrecord__c</fullName>
        <label>Error Record</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__errorstack__c</fullName>
        <label>Error Stack</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__execfinishmillis__c</fullName>
        <label>Exec Finish</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__executecalledmillis__c</fullName>
        <label>Execute Called</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_execcalledtofinish__c</fullName>
        <formula>IF(rstkf__execfinishmillis__c &gt; 0 &amp;&amp; rstkf__executecalledmillis__c &gt; 0, ( rstkf__execfinishmillis__c - rstkf__executecalledmillis__c ), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exec Called To Finish</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_exectofinish__c</fullName>
        <formula>IF((rstkf__isbatch__c || rstkf__isqueueable__c) &amp;&amp; rstkf__batchfinishmillis__c &gt; 0 &amp;&amp; rstkf__batchexecstartedmillis__c &gt; 0, ( rstkf__batchfinishmillis__c - rstkf__batchexecstartedmillis__c ), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch Exec To Finish</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>Id</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_starttoexec__c</fullName>
        <formula>IF((rstkf__isbatch__c || rstkf__isqueueable__c) &amp;&amp; rstkf__batchexecstartedmillis__c &gt; 0 &amp;&amp; rstkf__batchstartedmillis__c &gt; 0, ( rstkf__batchexecstartedmillis__c - rstkf__batchstartedmillis__c ), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch Start To Exec</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_submittostart__c</fullName>
        <formula>IF((rstkf__isbatch__c || rstkf__isqueueable__c) &amp;&amp; rstkf__batchstartedmillis__c &gt; 0 &amp;&amp; rstkf__batchsubmittedmillis__c &gt; 0, ( rstkf__batchstartedmillis__c - rstkf__batchsubmittedmillis__c ), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch Submit To Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__input__c</fullName>
        <label>Input Parameters</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__isbatch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Batch Apex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__isdebug__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDebug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__iserror__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Error Occurred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__isheroku__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was created due to a heroku process</description>
        <label>Heroku Execution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__isqueueable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Queueable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__jobid__c</fullName>
        <label>Apex Job ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__jobids__c</fullName>
        <label>Apex Job IDs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__log__c</fullName>
        <label>Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__output__c</fullName>
        <label>output</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__runby__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is for Rootstock debug and tracing only</description>
        <label>Run By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ZZ_GLProcesslogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__searchindex__c</fullName>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__status__c</fullName>
        <label>Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__substatus__c</fullName>
        <label>Sub Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__uikey__c</fullName>
        <label>uikey</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__warning__c</fullName>
        <label>Warning</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>ZZ_GLProcesslog</label>
    <listViews>
        <fullName>rstkf__RS_Process_Log_Financials</fullName>
        <columns>NAME</columns>
        <columns>rstkf__errormessage__c</columns>
        <columns>rstkf__errormessagelong__c</columns>
        <columns>rstkf__iserror__c</columns>
        <columns>rstkf__errorrecord__c</columns>
        <columns>rstkf__errorstack__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstkf__status__c</columns>
        <columns>rstkf__substatus__c</columns>
        <filterScope>Everything</filterScope>
        <label>Process Log - Financials</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZZ_GLProcesslogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>